--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logoalphaomegapng.png" />
+  <link rel="icon" type="image/png" href="LogoAlphaOmega.jpeg" />
 
   <title>AlphaOmega</title>
   <link rel="manifest" href="manifest.json">
