--- a/index.html
+++ b/index.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
   <base href="/">
-
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -27,12 +14,59 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>frontend</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- ✅ OneSignal SDK -->
+  <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
 </head>
+
 <body>
   <script src="flutter_bootstrap.js" async></script>
+
+  <!-- ✅ Inisialisasi OneSignal Web Push -->
+  <script>
+    window.OneSignal = window.OneSignal || [];
+    OneSignal.push(function () {
+      OneSignal.init({
+        appId: "257845e8-86e4-466e-b8cb-df95a1005a5f",
+        allowLocalhostAsSecureOrigin: true,
+        notifyButton: { enable: true },
+        welcomeNotification: {
+          title: "Selamat datang!",
+          message: "Notifikasi siap digunakan."
+        }
+      });
+
+      // 🔔 Event: tampilkan suara custom saat notif muncul
+      OneSignal.on('notificationDisplay', function (event) {
+        console.log('Notifikasi tampil di web:', event);
+        var audio = new Audio('/sounds/cashier.mp3'); // pastikan file ada di web/sounds/
+        audio.play().catch(() => console.log("Autoplay diblokir oleh browser"));
+      });
+
+      // 📌 Event: klik notifikasi
+      OneSignal.on('notificationClick', function (event) {
+        console.log('Klik notif:', event);
+        if (event.data && event.data.idPesanan) {
+          // arahkan ke halaman Flutter
+          window.location.href = '/#detailPesanan?idPesanan=' + event.data.idPesanan;
+        }
+      });
+    });
+
+    // ✅ Registrasi Service Worker (penting untuk PWA & push)
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('flutter_service_worker.js?v=2913101978')
+        .then(function (registration) {
+          console.log('ServiceWorker registered with scope:', registration.scope);
+        }).catch(function (err) {
+          console.log('ServiceWorker registration failed:', err);
+        });
+    }
+  </script>
 </body>
+
 </html>
